# nutrition-app

./: .gitignore  AUDIT_FRIDAY_DEMO.md  CLAUDE.md  PARALLEL_AGENTS_PLAN.md  README.md  ROADMAP.md  STATUS.md  VERIFICATION_REPORT.md  app_admin.py  app_ui.py  app_user.py  app_user.py.tmpnew  barcode_db_table.sql  o.py  open_firewall_8501.bat  pyproject.toml  railway.toml  render.yaml  requirements.txt  run_autonomous_loop.py  run_daily_expansion.py  run_demo.py  run_demo_autonomous.py  run_product_demo.py  run_system.py  start_all.bat  start_api.bat  start_bitefit.bat  start_bitefit.py  streamlit_out.txt  supabase_tables.sql  ui_helpers.py  הפעל_אפליקציה.bat  פקודות
.claude/: launch.json  settings.local.json
.streamlit/: config.toml  secrets.toml.example
agent_io/: agent_log.md  recipe_queue.json
agents/: food_cache.py  food_data_agent.py  hebrew_resolver.py  queue_processor.py  seed_test_data.py  system_reporter.py  test_fallback.py  test_food_data_agent.py  unknown_queue.py
api/: README.md  _tz.py  deps.py  food_image.py  llm_usage.py  main.py  nutrition_ai.py  requirements.txt  usage.py
app/: __init__.py  קישור לאתר
approval_version_nutt_app/: market_brief.json
auth/: __init__.py  login_ui.py  supabase_client.py
automation/: README.md  run_agent.ps1  setup_scheduler.ps1
chatbot/: grok_client.py  sidebar_widget.py  system_prompt.py  tools.py
config/: strings_he.json
contracts/: ERD.md
data/: expand_cursor.json  food_images_manual.json  mealdb_category_samples.json  recipe_images.json  recipe_wiki_images.json
db/: database.py
docs/: GTM_PLAN.md  (+1 more)
(+2856 files in other folders)
